--- a/buf.gen.yaml
+++ b/buf.gen.yaml
@@ -24,8 +24,8 @@ managed:
 
 inputs:
 
-- module: buf.build/innabox/fulfillment-api:v0.0.29
-- module: buf.build/innabox/private-api:v0.0.37
+- directory: ../fulfillment-api/proto
+- directory: ../fulfillment-service/proto
 
 plugins:
 
